sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:19: error: v is already defined as variable v
  var v : Int =0
      ^AlgShellSort:20: error: cpt is already defined as variable cpt
  var cpt:Int =0
      ^